// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: auto;
  filter: invert(0%);
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Img /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: auto;
  filter: invert(100%);
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`<ImgInline /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  filter: invert(0%);
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`<ImgInline /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  filter: invert(100%);
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <ImgIcon /> 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: auto;
  filter: invert(0%);
}

.c1 {
  width: 3rem;
}

<img
    class="c0 c1"
  />
</DocumentFragment>
`;
